# rust-fatfs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  TODO.md  build-nostd.sh  rustfmt.toml
.github/workflows/: ci.yml
examples/: cat.rs  ls.rs  mkfatfs.rs  partition.rs  sample.rs  write.rs
resources/: fat12.img  fat16.img  floppy.img
scripts/: create-test-img.sh
src/: boot_sector.rs  byteorder_core_io.rs  dir.rs  dir_entry.rs  error.rs  file.rs  fs.rs  io.rs  lib.rs  log_macros.rs  main.rs  table.rs  time.rs  utils.rs
tests/: format.rs  fsck.rs  integration-test.rs  read.rs  write.rs
