[package]
name = "fatfs"
version = "0.2.0"
authors = ["Rafał Harabień <rafalh1992@o2.pl>"]
repository = "https://github.com/rafalh/rust-fatfs"
readme = "README.md"
keywords = ["fat", "filesystem"]
categories = ["filesystem"]
license = "MIT"
description = """
FAT filesystem library.
"""
exclude = [
    "resources/*",
]

[badges]
travis-ci = { repository = "rafalh/rust-fatfs" }

[features]
default = ["chrono"]

[dependencies]
byteorder = "1"
bitflags = "1.0"
log = "0.3.8"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.4.3"
