[package]
name = "fatfs"
version = "0.3.2"
authors = ["Rafał Harabień <rafalh92@outlook.com>"]
repository = "https://github.com/rafalh/rust-fatfs"
readme = "README.md"
keywords = ["fat", "filesystem", "no_std"]
categories = ["filesystem"]
license = "MIT"
description = """
FAT filesystem library.
"""
exclude = [
    "resources/*",
]

[badges]
travis-ci = { repository = "rafalh/rust-fatfs" }

[features]
# Use Rust std library
std = []
# Use dynamic allocation - required for LFN support. When used without std please enable core_io/collections
alloc = []
# Default features
default = ["chrono", "std", "alloc"]

[dependencies]
byteorder = "1"
bitflags = "1.0"
log = "0.4"
chrono = { version = "0.4", optional = true }
core_io = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "0.5"
fscommon = "0.1"
